HelloWorld/README
Removed #include <iostream>
"J:\Physics\spa4321\CLion 2016.2.3\bin\cmake\bin\cmake.exe" --build C:\Users\ap14058\.CLion2016.2\system\cmake\generated\HelloWorld-e677112\e677112\Debug --target HelloWorld -- -j 8
Scanning dependencies of target HelloWorld
[ 50%] Building CXX object CMakeFiles/HelloWorld.dir/main.cpp.obj
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:2:17: error: missing terminating > character
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp: In function 'int main()':
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:7:5: error: 'cout' was not declared in this scope
     cout << message << endl;
     ^
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:7:24: error: 'endl' was not declared in this scope
     cout << message << endl;
                        ^
mingw32-make.exe[3]: *** [CMakeFiles/HelloWorld.dir/main.cpp.obj] Error 1
CMakeFiles\HelloWorld.dir\build.make:61: recipe for target 'CMakeFiles/HelloWorld.dir/main.cpp.obj' failed
CMakeFiles\Makefile2:66: recipe for target 'CMakeFiles/HelloWorld.dir/all' failed
mingw32-make.exe[2]: *** [CMakeFiles/HelloWorld.dir/all] Error 2
CMakeFiles\Makefile2:78: recipe for target 'CMakeFiles/HelloWorld.dir/rule' failed
mingw32-make.exe[1]: *** [CMakeFiles/HelloWorld.dir/rule] Error 2
mingw32-make.exe: *** [HelloWorld] Error 2
Makefile:117: recipe for target 'HelloWorld' failed



Removed one of the double-quotes from the string literal
"J:\Physics\spa4321\CLion 2016.2.3\bin\cmake\bin\cmake.exe" --build C:\Users\ap14058\.CLion2016.2\system\cmake\generated\HelloWorld-e677112\e677112\Debug --target HelloWorld -- -j 8
Scanning dependencies of target HelloWorld
[ 50%] Building CXX object CMakeFiles/HelloWorld.dir/main.cpp.obj
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:6:35: warning: missing terminating " character
     string message = Hello, World!";
                                   ^
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:6:5: error: missing terminating " character
     string message = Hello, World!";
     ^
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp: In function 'int main()':
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:6:22: error: 'Hello' was not declared in this scope
     string message = Hello, World!";
                      ^
mingw32-make.exe[3]: *** [CMakeFiles/HelloWorld.dir/main.cpp.obj] Error 1
CMakeFiles\HelloWorld.dir\build.make:61: recipe for target 'CMakeFiles/HelloWorld.dir/main.cpp.obj' failed
mingw32-make.exe[2]: *** [CMakeFiles/HelloWorld.dir/all] Error 2
CMakeFiles\Makefile2:66: recipe for target 'CMakeFiles/HelloWorld.dir/all' failed
mingw32-make.exe[1]: *** [CMakeFiles/HelloWorld.dir/rule] Error 2
CMakeFiles\Makefile2:78: recipe for target 'CMakeFiles/HelloWorld.dir/rule' failed
mingw32-make.exe: *** [HelloWorld] Error 2
Makefile:117: recipe for target 'HelloWorld' failed



Removed a semi-colon
"J:\Physics\spa4321\CLion 2016.2.3\bin\cmake\bin\cmake.exe" --build C:\Users\ap14058\.CLion2016.2\system\cmake\generated\HelloWorld-e677112\e677112\Debug --target HelloWorld -- -j 8
Scanning dependencies of target HelloWorld
[ 50%] Building CXX object CMakeFiles/HelloWorld.dir/main.cpp.obj
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp: In function 'int main()':
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:7:5: error: expected ',' or ';' before 'cout'
     cout << message << endl;
     ^
CMakeFiles\HelloWorld.dir\build.make:61: recipe for target 'CMakeFiles/HelloWorld.dir/main.cpp.obj' failed
mingw32-make.exe[3]: *** [CMakeFiles/HelloWorld.dir/main.cpp.obj] Error 1
CMakeFiles\Makefile2:66: recipe for target 'CMakeFiles/HelloWorld.dir/all' failed
mingw32-make.exe[2]: *** [CMakeFiles/HelloWorld.dir/all] Error 2
CMakeFiles\Makefile2:78: recipe for target 'CMakeFiles/HelloWorld.dir/rule' failed
mingw32-make.exe[1]: *** [CMakeFiles/HelloWorld.dir/rule] Error 2
mingw32-make.exe: *** [HelloWorld] Error 2
Makefile:117: recipe for target 'HelloWorld' failed



Remove the final curly bracket
"J:\Physics\spa4321\CLion 2016.2.3\bin\cmake\bin\cmake.exe" --build C:\Users\ap14058\.CLion2016.2\system\cmake\generated\HelloWorld-e677112\e677112\Debug --target HelloWorld -- -j 8
Scanning dependencies of target HelloWorld
[ 50%] Building CXX object CMakeFiles/HelloWorld.dir/main.cpp.obj
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp: In function 'int main()':
C:\Users\ap14058\ClionProjects\ap14058\HelloWorld\main.cpp:8:13: error: expected '}' at end of input
     return 0;
             ^
mingw32-make.exe[3]: *** [CMakeFiles/HelloWorld.dir/main.cpp.obj] Error 1
CMakeFiles\HelloWorld.dir\build.make:61: recipe for target 'CMakeFiles/HelloWorld.dir/main.cpp.obj' failed
mingw32-make.exe[2]: *** [CMakeFiles/HelloWorld.dir/all] Error 2
CMakeFiles\Makefile2:66: recipe for target 'CMakeFiles/HelloWorld.dir/all' failed
mingw32-make.exe[1]: *** [CMakeFiles/HelloWorld.dir/rule] Error 2
CMakeFiles\Makefile2:78: recipe for target 'CMakeFiles/HelloWorld.dir/rule' failed
mingw32-make.exe: *** [HelloWorld] Error 2
Makefile:117: recipe for target 'HelloWorld' failed